# newsgroups-qwen-embed

./: .env.example  .gitignore  LICENSE  QWEN-EMBED.md  README.md  newsgroups_embeddings_demo.ipynb  pyproject.toml  qwen_embedder.py  test_setup.py
docs/: README.md  data.json  index.html
docs/assets/css/: style.css
docs/assets/js/: app.js
scripts/: generate_data.py
